%% ==========================================
%% CLASS DIAGRAM - SISTEM INFORMASI PERSEDIAAN
%% TOKO BANGUNAN MITRA USAHA 2 PONTIANAK
%% ==========================================

classDiagram
    direction LR

    %% ==========================================
    %% KELAS MASTER DATA (KIRI)
    %% ==========================================
    class Supplier {
        +bigint id
        -varchar nama_supplier
        -text alamat
        -varchar nama_pic
        -varchar no_hp
        -varchar email
        -varchar kategori_suplai
        -varchar termin_default
        -varchar nama_bank
        -varchar no_rekening
        -text catatan
        -varchar status
        -timestamp created_at
        -timestamp updated_at
    }

    class Kategori {
        +bigint id
        -varchar prefix_sku
        -varchar nama_kategori
        -text deskripsi
        -timestamp created_at
        -timestamp updated_at
    }

    class User {
        +bigint id
        -varchar name
        -varchar email
        -enum role
        -timestamp email_verified_at
        -varchar password
        -varchar remember_token
        -timestamp created_at
        -timestamp updated_at
    }

    class Product {
        +bigint id
        -bigint kategori_id
        -varchar sku
        -varchar barcode
        -varchar nama_barang
        -int stok
        -int lead_time_hari
        -enum tipe_safety_stock
        -int safety_stock
        -int reorder_point
        -bigint harga_beli
        -bigint harga_jual
        -varchar satuan
        -timestamp created_at
        -timestamp updated_at
    }

    %% ==========================================
    %% KELAS TRANSAKSI (TENGAH)
    %% ==========================================
    class Transaction {
        +bigint id
        -varchar no_transaksi
        -enum jenis_transaksi
        -date tanggal
        -bigint supplier_id
        -bigint user_id
        -varchar no_referensi
        -varchar tujuan
        -varchar kategori_keluar
        -date estimasi_datang
        -varchar tipe_pembayaran
        -varchar info_pengiriman
        -decimal total_nilai
        -text catatan
        -enum status
        -timestamp created_at
        -timestamp updated_at
    }

    class TransactionItem {
        +bigint id
        -bigint transaction_id
        -bigint product_id
        -int qty
        -int qty_rusak
        -decimal harga_satuan
        -decimal diskon
        -decimal subtotal
        -varchar spesifikasi
        -date tgl_expired
        -timestamp created_at
        -timestamp updated_at
    }

    class StockOpname {
        +bigint id
        -varchar no_opname
        -date tanggal
        -varchar periode
        -bigint dibuat_oleh
        -bigint disetujui_oleh
        -enum status
        -text catatan
        -timestamp created_at
        -timestamp updated_at
    }

    class StockOpnameDetail {
        +bigint id
        -bigint stock_opname_id
        -bigint product_id
        -int stok_sistem
        -int stok_fisik
        -int selisih
        -bigint harga_pokok_snapshot
        -bigint nilai_selisih
        -varchar keterangan
        -timestamp created_at
        -timestamp updated_at
    }

    class Message {
        +bigint id
        -bigint from_user_id
        -text content
        -timestamp created_at
        -timestamp updated_at
    }

    class MessageRead {
        +bigint id
        -bigint message_id
        -bigint user_id
        -timestamp created_at
        -timestamp updated_at
    }

    %% ==========================================
    %% KELAS INDEPENDEN (KANAN BAWAH)
    %% ==========================================
    class StoreProfile {
        +bigint id
        -varchar nama_toko
        -varchar tagline
        -text alamat
        -varchar telepon
        -varchar email
        -varchar kota_ttd
        -varchar nama_kepala_gudang
        -tinyint is_active
        -timestamp created_at
        -timestamp updated_at
    }

    class KategoriOutbound {
        +bigint id
        -varchar nama_kategori
        -timestamp created_at
        -timestamp updated_at
    }

    %% ==========================================
    %% RELASI (DIATUR URUTANNYA AGAR RAPI)
    %% ==========================================
    
    %% JALUR 1: KATEGORI → PRODUK → ITEM TRANSAKSI & OPNAME
    Kategori "1" --> "0..*" Product
    Product "1" --> "0..*" StockOpnameDetail
    Product "1" --> "0..*" TransactionItem

    %% JALUR 2: SUPPLIER & USER → TRANSAKSI → ITEM
    User "1" --> "0..*" Transaction
    Supplier "1" --> "0..*" Transaction
    Transaction "1" *-- "1..*" TransactionItem

    %% JALUR 3: USER → OPNAME → DETAIL
    User "1" --> "0..*" StockOpname : dibuat
    User "1" --> "0..*" StockOpname : disetujui
    StockOpname "1" *-- "1..*" StockOpnameDetail

    %% JALUR 4: USER → CHAT → READ
    User "1" --> "0..*" Message
    User "1" --> "0..*" MessageRead
    Message "1" *-- "0..*" MessageRead
